tests/transpiler/x/scala/group_by_join.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/group_by_join.scala:9: error: ';' expected but 'for' found.
    val stats: ArrayBuffer[Map[String,Any]] = ({ var _groups = Map[Any, Map[String, Any]]() ; var _res = ArrayBuffer[Map[String,Any]]() ; for (o <- orders) { for (c <- customers) { if (o.customerId == c.id) { val _key = c.name ; val _g = _groups.getOrElseUpdate(_key, Map("key" -> _key, "items" -> ArrayBuffer[Any]())) ; _g("items").asInstanceOf[ArrayBuffer[Any]].append(o) } } for (g <- _groups.values) { _res.append(Map("name" -> g("key"), "count" -> g("items").size)) } ; _res })
                                                                                                                                                                                                                                                                                                                                                                                          ^
/workspace/mochi/tests/transpiler/x/scala/group_by_join.scala:9: error: ';' expected but ')' found.
    val stats: ArrayBuffer[Map[String,Any]] = ({ var _groups = Map[Any, Map[String, Any]]() ; var _res = ArrayBuffer[Map[String,Any]]() ; for (o <- orders) { for (c <- customers) { if (o.customerId == c.id) { val _key = c.name ; val _g = _groups.getOrElseUpdate(_key, Map("key" -> _key, "items" -> ArrayBuffer[Any]())) ; _g("items").asInstanceOf[ArrayBuffer[Any]].append(o) } } for (g <- _groups.values) { _res.append(Map("name" -> g("key"), "count" -> g("items").size)) } ; _res })
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 ^
/workspace/mochi/tests/transpiler/x/scala/group_by_join.scala:12: error: Missing closing brace `}' assumed here
    println(List(s.name, "orders:", s.count).mkString(" "))
    ^
/workspace/mochi/tests/transpiler/x/scala/group_by_join.scala:14: error: ')' expected but '}' found.
  }
  ^
four errors found
